--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.zh-hans.xlf
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.zh-hans.xlf
@@ -7259,6 +7259,111 @@ The Query Processor estimates that implementing the following index could improv
         <target state="translated">未能生成服务器上下文化脚本</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="FailedToFindConnectionInfoAboutTheServer">
+        <source>Failed to find connection info about the server</source>
+        <target state="translated">找不到有关服务器的连接信息</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="querystorecapturemode_all">
+        <source>All</source>
+        <target state="translated">全部</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="querystorecapturemode_auto">
+        <source>Auto</source>
+        <target state="translated">自动</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="querystorecapturemode_none">
+        <source>None</source>
+        <target state="translated">无</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="querystorecapturemode_custom">
+        <source>Custom</source>
+        <target state="translated">自定义</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="queryStoreSizeBasedCleanupMode_Off">
+        <source>Off</source>
+        <target state="translated">关</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="queryStoreSizeBasedCleanupMode_Auto">
+        <source>Auto</source>
+        <target state="translated">自动</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="statisticsCollectionInterval_OneMinute">
+        <source>1 Minute</source>
+        <target state="translated">1 分钟</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="statisticsCollectionInterval_FiveMinutes">
+        <source>5 Minutes</source>
+        <target state="translated">5 分钟</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="statisticsCollectionInterval_TenMinutes">
+        <source>10 Minutes</source>
+        <target state="translated">10 分钟</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="statisticsCollectionInterval_FifteenMinutes">
+        <source>15 Minutes</source>
+        <target state="translated">15 分钟</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="statisticsCollectionInterval_ThirtyMinutes">
+        <source>30 Minutes</source>
+        <target state="translated">30 分钟</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="statisticsCollectionInterval_OneHour">
+        <source>1 Hour</source>
+        <target state="translated">1 小时</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="statisticsCollectionInterval_OneDay">
+        <source>1 Day</source>
+        <target state="translated">1 天</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="queryStore_stale_threshold_OneHour">
+        <source>1 Hour</source>
+        <target state="translated">1 小时</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="queryStore_stale_threshold_FourHours">
+        <source>4 Hours</source>
+        <target state="translated">4 小时</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="queryStore_stale_threshold_EightHours">
+        <source>8 Hours</source>
+        <target state="translated">8 小时</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="queryStore_stale_threshold_TwelveHours">
+        <source>12 Hours</source>
+        <target state="translated">12 小时</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="queryStore_stale_threshold_OneDay">
+        <source>1 Day</source>
+        <target state="translated">1 天</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="queryStore_stale_threshold_ThreeDays">
+        <source>3 Days</source>
+        <target state="translated">3 天</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="queryStore_stale_threshold_SevenDays">
+        <source>7 Days</source>
+        <target state="translated">7 天</target>
+        <note></note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
