--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.de.xlf
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.de.xlf
@@ -7364,6 +7364,12 @@ Der Abfrageprozessor schätzt, dass durch das Implementieren des folgenden Index
         <target state="translated">7 Tage</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="InvalidDspFormatError">
+        <source>Invalid value for Database Schema Provider: '{0}'; expected to be in the form 'Microsoft.Data.Tools.Schema.Sql.SqlAzureV12DatabaseSchemaProvider'.</source>
+        <target state="translated">Ungültiger Wert für Datenbankschemaanbieter: "{0}"; Erwartet wurde das Format "Microsoft.Data.Tools.Schema.Sql.SqlAzureV12DatabaseSchemaProvider".</target>
+        <note>.
+ Parameters: 0 - dsp (string) </note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
