--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.fr.xlf
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.fr.xlf
@@ -7364,6 +7364,12 @@ Le processeur de requêtes estime que l'implémentation de l'index suivant peut 
         <target state="translated">7 jours</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="InvalidDspFormatError">
+        <source>Invalid value for Database Schema Provider: '{0}'; expected to be in the form 'Microsoft.Data.Tools.Schema.Sql.SqlAzureV12DatabaseSchemaProvider'.</source>
+        <target state="translated">Valeur non valide pour le fournisseur de schéma de base de données : « {0} » ; devrait être sous la forme « Microsoft.Data.Tools.Schema.Sql.SqlAzureV12DatabaseSchemaProvider ».</target>
+        <note>.
+ Parameters: 0 - dsp (string) </note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
