--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.pt-br.xlf
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.pt-br.xlf
@@ -7364,6 +7364,12 @@ O Processador de Consultas estima que a implementação do índice a seguir pode
         <target state="translated">7 dias</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="InvalidDspFormatError">
+        <source>Invalid value for Database Schema Provider: '{0}'; expected to be in the form 'Microsoft.Data.Tools.Schema.Sql.SqlAzureV12DatabaseSchemaProvider'.</source>
+        <target state="translated">Valor inválido para o Provedor de Esquema de Banco de Dados: espera-se que '{0}'; que esteja no formato 'Microsoft.Data.Tools.Schema.Sql.SqlAzureV12DatabaseSchemaProvider'.</target>
+        <note>.
+ Parameters: 0 - dsp (string) </note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
