--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.zh-hant.xlf
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.zh-hant.xlf
@@ -7364,6 +7364,12 @@ The Query Processor estimates that implementing the following index could improv
         <target state="translated">7 天</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="InvalidDspFormatError">
+        <source>Invalid value for Database Schema Provider: '{0}'; expected to be in the form 'Microsoft.Data.Tools.Schema.Sql.SqlAzureV12DatabaseSchemaProvider'.</source>
+        <target state="translated">資料庫架構提供者的值無效: '{0}';格式必須是 'Microsoft.Data.Tools.Schema.Sql.SqlAzureV12DatabaseSchemaProvider'。</target>
+        <note>.
+ Parameters: 0 - dsp (string) </note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
